views: win: Fix occlusion tracking of initially-minimized windows (fixes #3638)
Chromium considers initially-minimized windows to be visible at
creation time in the Aura layer. This confuses the native occlusion
detector which knows that the OS window is initially hidden due to
IsIconic returning true. Start occlusion tracking with consistent
state by delaying enablement until the initially-minimized window is
restored for the first time.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -124,6 +124,10 @@ patches = [
     #
     # mac: Add support for ui::SHOW_STATE_HIDDEN.
     # https://github.com/chromiumembedded/cef/issues/3630
+	#
+    # win: Delay enablement of native occlusion tracking until the initially-
+    # minimized window is restored for the first time.
+    # https://github.com/chromiumembedded/cef/issues/3638
     'name': 'views_widget',
   },
   {
