chrome: win: Fix taskbar grouping of PiP and DevTools windows (fixes #3641)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -712,5 +712,10 @@ patches = [
     # alloy: Don't create GPUCache directory when cache_path is empty.
     # https://github.com/chromiumembedded/cef/issues/3617
     'name': 'content_renderer_host_3617'
-  }
+  },
+  {
+    # chrome: win: Fix taskbar grouping of PiP and DevTools windows.
+    # https://github.com/chromiumembedded/cef/issues/3641
+    'name': 'win_taskbar_group_3641'
+  },
 ]
