--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -463,9 +463,8 @@ patches = [
     #   "C:\temp\cache\Cache").
     # https://github.com/chromiumembedded/cef/issues/2622
     #
-    # alloy: Avoid initialization of privacy sandbox, identity manager and
-    # first party sets policy.
-    # https://github.com/chromiumembedded/cef/issues/3434
+    # alloy: Avoid initialization of privacy sandbox and identity manager.
+    # https://github.com/chromiumembedded/cef/issues/3643
     'name': 'services_network_2622',
   },
   {
