chrome: win: Disable taskbar decoration for PiP and DevTools windows (fixes #3645)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -733,4 +733,9 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3641
     'name': 'win_taskbar_group_3641'
   },
+  {
+    # chrome: win: Disable taskbar decoration for PiP and DevTools windows.
+    # https://github.com/chromiumembedded/cef/issues/3645
+    'name': 'win_taskbar_decorator_3645'
+  },
 ]
