mac: Add fallback for unsupported --lang values (fixes #3653)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -721,6 +721,9 @@ patches = [
   {
     # chrome: mac: Support locale configuration.
     # https://github.com/chromiumembedded/cef/issues/3623
+    #
+    # mac: Add fallback for unsupported --lang values.
+    # https://github.com/chromiumembedded/cef/issues/3653
     'name': 'mac_chrome_locale_3623'
   },
   {
