--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1997,6 +1997,7 @@ if (is_mac) {
     ]
     frameworks = [
       "AppKit.framework",
+      "IOSurface.framework",
       "OpenGL.framework",
     ]
     defines = [
