--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -757,5 +757,14 @@ patches = [
     # views: mac: Add customization point to acceptsFirstMouse.
     # https://github.com/chromiumembedded/cef/issues/3680
     'name': 'mac_render_widget_3680'
+  },
+  {
+    # win: Remove keyed mutex with OSR for better performace and to avoid
+    # potential vendor driver bugs.
+    # https://bitbucket.org/chromiumembedded/cef/pull-requests/734
+    # https://github.com/chromiumembedded/cef/issues/2575
+    # It is a bit hacky, not suitable for merging into upstream.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5302103
+    'name': 'osr_win_remove_keyed_mutex_2575'
   }
 ]
