Add callbacks for unresponsive render process (fixes #3661)
The client can optionally wait or terminate the render process.

Expose process exit codes via OnRenderProcessTerminated and
CefGetExitCode (fixes #2126).

cefclient: Add a new https://tests/hang page for testing hang behavior.

cefclient: Move message and resource handling to a new BaseClientHandler
class to support loading of test pages in default Chrome UI windows.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -620,6 +620,8 @@ source_set("libcef_static") {
     "libcef/browser/frame_service_base.h",
     "libcef/browser/global_preference_manager_impl.cc",
     "libcef/browser/global_preference_manager_impl.h",
+    "libcef/browser/hang_monitor.cc",
+    "libcef/browser/hang_monitor.h",
     "libcef/browser/image_impl.cc",
     "libcef/browser/image_impl.h",
     "libcef/browser/iothread_state.cc",
