--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -341,6 +341,11 @@ patches = [
     'name': 'chrome_plugins',
   },
   {
+    # Expose sad tab error strings.
+    # https://github.com/chromiumembedded/cef/issues/3661
+    'name': 'chrome_sad_tab_error',
+  },
+  {
     # Don't create databases, blob_storage or VideoDecodeStats directories when
     # cache_path is empty.
     # https://github.com/chromiumembedded/cef/issues/2289
