views: Update textfield colors when enabled state changes

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -733,4 +733,9 @@ patches = [
     # https://chromium-review.googlesource.com/c/chromium/src/+/5388128
     'name': 'chrome_watermark_5388128'
   },
+  {
+    # views: Update textfield colors when enabled state changes
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5399416
+    'name': 'views_textfield_5399416'
+  }
 ]
