Disable thin archives with cef_sandbox builds (fixes #3674)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -412,8 +412,8 @@ patches = [
     'name': 'printing_context_2196',
   },
   {
-    # Windows: Remove llvmlibthin as the combine_libs.py can't handle those.
-    # https://github.com/chromiumembedded/cef/issues/2470
+    # Disable thin archives with cef_sandbox builds.
+    # https://github.com/chromiumembedded/cef/issues/3674
     'name': 'build',
   },
   {
