--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -211,6 +211,9 @@ patches = [
   {
     # Changes to support the Chrome runtime in CEF.
     # https://github.com/chromiumembedded/cef/issues/2969
+    #
+    # Apply dynamic light/dark theme changes to web content.
+    # https://issues.chromium.org/issues/332328864#comment3
     'name': 'chrome_runtime',
   },
   {
@@ -737,5 +740,17 @@ patches = [
     # views: Update textfield colors when enabled state changes
     # https://chromium-review.googlesource.com/c/chromium/src/+/5399416
     'name': 'views_textfield_5399416'
+  },
+  {
+    # views: Add ColorProviderManagerObserver.
+    # https://github.com/chromiumembedded/cef/issues/3610
+    'name': 'color_provider_manager_3610'
+  },
+  {
+    # linux: Disable GtkUi with multi-threaded-message-loop to avoid crashes.
+    # linux: Disable GTK theme change notifications due to performance issues.
+    # https://github.com/chromiumembedded/cef/issues/3610
+    # https://issues.chromium.org/issues/40280130#comment7
+    'name': 'linux_gtk_theme_3610'
   }
 ]
