mac: views: Add customization point for acceptsFirstMouse (fixes #3680)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -752,5 +752,10 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3610
     # https://issues.chromium.org/issues/40280130#comment7
     'name': 'linux_gtk_theme_3610'
+  },
+  {
+    # views: mac: Add customization point to acceptsFirstMouse.
+    # https://github.com/chromiumembedded/cef/issues/3680
+    'name': 'mac_render_widget_3680'
   }
 ]
