Remove explicit tracking of guest view frames
This is no longer required now that we have implicit exclusion
of certain frame types including guest view frames.

Rename GuestView to ExcludedView in the renderer process.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -150,8 +150,7 @@ patches = [
     'name': 'web_contents_1257_1565',
   },
   {
-    # Support custom RenderWidgetHostViewOSR for MimeHandlerViewGuest and
-    # expose OnGuestAttached/Detached notifications.
+    # Support custom RenderWidgetHostViewOSR for MimeHandlerViewGuest.
     # https://github.com/chromiumembedded/cef/issues/1565
     # https://github.com/chromiumembedded/cef/issues/2727
     'name': 'mime_handler_view_guest_1565_2727',
