win: Fix generated binaries crashing with exit code 3221225477
See https://issues.chromium.org/issues/336007395

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -780,5 +780,12 @@ patches = [
     # It is a bit hacky, not suitable for merging into upstream.
     # https://chromium-review.googlesource.com/c/chromium/src/+/5302103
     'name': 'osr_win_remove_keyed_mutex_2575'
+  },
+  {
+    # win: Fix generated binaries crashing with exit code 3221225477.
+    # https://issues.chromium.org/issues/336007395
+    # Reverts
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5454331
+    'name': 'win_partition_freelist_entry_336007395'
   }
 ]
