chrome: Add CefDownloadHandler support (see #3681)
Behaves the same as Alloy runtime except that CanDownload is not
called for invalid protocol schemes.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -465,6 +465,8 @@ source_set("libcef_static") {
     "libcef/browser/alloy/alloy_browser_main.h",
     "libcef/browser/alloy/alloy_content_browser_client.cc",
     "libcef/browser/alloy/alloy_content_browser_client.h",
+    "libcef/browser/alloy/alloy_download_manager_delegate.cc",
+    "libcef/browser/alloy/alloy_download_manager_delegate.h",
     "libcef/browser/alloy/alloy_download_util.cc",
     "libcef/browser/alloy/alloy_download_util.h",
     "libcef/browser/alloy/alloy_web_contents_view_delegate.cc",
@@ -576,6 +578,8 @@ source_set("libcef_static") {
     "libcef/browser/download_item_impl.h",
     "libcef/browser/download_manager_delegate.cc",
     "libcef/browser/download_manager_delegate.h",
+    "libcef/browser/download_manager_delegate_impl.cc",
+    "libcef/browser/download_manager_delegate_impl.h",
     "libcef/browser/extension_impl.cc",
     "libcef/browser/extension_impl.h",
     "libcef/browser/extensions/api/file_system/cef_file_system_delegate.cc",
