--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -280,6 +280,12 @@ patches = [
     'name': 'chrome_browser_dialogs_widget',
   },
   {
+    # alloy: Support override of DownloadPrefs::FromBrowserContext
+    # chrome: Support custom DownloadManagerDelegate handling.
+    # https://github.com/chromiumembedded/cef/issues/3681
+    'name': 'chrome_browser_download',
+  },
+  {
     # chrome: Support override of ChromeMimeHandlerViewGuestDelegate.
     # https://github.com/chromiumembedded/cef/issues/2969
     #
