chrome: Add extension support for Alloy style browsers (see #3681)
This change adds minimal tabs API support for Alloy style browsers.
Clicking links in PDF documents now navigate as expected.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -542,6 +542,8 @@ source_set("libcef_static") {
     "libcef/browser/chrome/chrome_startup_browser_creator.h",
     "libcef/browser/chrome/chrome_web_contents_view_delegate_cef.h",
     "libcef/browser/chrome_crash_reporter_client_stub.cc",
+    "libcef/browser/chrome/extensions/chrome_extension_util.cc",
+    "libcef/browser/chrome/extensions/chrome_extension_util.h",
     "libcef/browser/chrome/extensions/chrome_mime_handler_view_guest_delegate_cef.cc",
     "libcef/browser/chrome/extensions/chrome_mime_handler_view_guest_delegate_cef.h",
     "libcef/browser/chrome/views/browser_platform_delegate_chrome_child_window.cc",
@@ -930,6 +932,8 @@ source_set("libcef_static") {
     "libcef/features/runtime_checks.h",
     "libcef/renderer/alloy/alloy_content_renderer_client.cc",
     "libcef/renderer/alloy/alloy_content_renderer_client.h",
+    "libcef/renderer/alloy/alloy_render_frame_observer.cc",
+    "libcef/renderer/alloy/alloy_render_frame_observer.h",
     "libcef/renderer/alloy/alloy_render_thread_observer.cc",
     "libcef/renderer/alloy/alloy_render_thread_observer.h",
     "libcef/renderer/alloy/url_loader_throttle_provider_impl.cc",
