--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -282,6 +282,9 @@ patches = [
   {
     # chrome: Support override of ChromeMimeHandlerViewGuestDelegate.
     # https://github.com/chromiumembedded/cef/issues/2969
+    #
+    # chrome: Add minimal support for tabs API with Alloy style browsers.
+    # https://github.com/chromiumembedded/cef/issues/3681
     'name': 'chrome_browser_extensions',
   },
   {
