Add GN arg to disable Alloy bootstrap (see #3681, see #3685)
Set enable_alloy_bootstrap=false to build with Alloy bootstrap code
removed. Extension API is documented as deprecated in comments but
not compiled out with this arg.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -99,6 +99,7 @@ import("//build/config/locales.gni")
 import("//build/config/ozone.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 import("//build/config/ui.gni")
+import("//cef/libcef/features/features.gni")
 import("//chrome/common/features.gni")
 import("//content/public/app/mac_helpers.gni")
 import("//extensions/buildflags/buildflags.gni")
@@ -457,42 +458,14 @@ source_set("libcef_test_support") {
 source_set("libcef_static") {
   sources = includes_common +
             gypi_paths.autogen_cpp_includes + [
-    "libcef/browser/alloy/alloy_browser_context.cc",
-    "libcef/browser/alloy/alloy_browser_context.h",
     "libcef/browser/alloy/alloy_browser_host_impl.cc",
     "libcef/browser/alloy/alloy_browser_host_impl.h",
-    "libcef/browser/alloy/alloy_browser_main.cc",
-    "libcef/browser/alloy/alloy_browser_main.h",
-    "libcef/browser/alloy/alloy_content_browser_client.cc",
-    "libcef/browser/alloy/alloy_content_browser_client.h",
-    "libcef/browser/alloy/alloy_download_manager_delegate.cc",
-    "libcef/browser/alloy/alloy_download_manager_delegate.h",
-    "libcef/browser/alloy/alloy_download_util.cc",
-    "libcef/browser/alloy/alloy_download_util.h",
-    "libcef/browser/alloy/alloy_web_contents_view_delegate.cc",
-    "libcef/browser/alloy/alloy_web_contents_view_delegate.h",
     "libcef/browser/alloy/browser_platform_delegate_alloy.cc",
     "libcef/browser/alloy/browser_platform_delegate_alloy.h",
-    "libcef/browser/alloy/devtools/alloy_devtools_window_runner.cc",
-    "libcef/browser/alloy/devtools/alloy_devtools_window_runner.h",
-    "libcef/browser/alloy/devtools/devtools_file_manager.cc",
-    "libcef/browser/alloy/devtools/devtools_file_manager.h",
-    "libcef/browser/alloy/devtools/devtools_frontend.cc",
-    "libcef/browser/alloy/devtools/devtools_frontend.h",
-    "libcef/browser/alloy/devtools/devtools_manager_delegate.cc",
-    "libcef/browser/alloy/devtools/devtools_manager_delegate.h",
     "libcef/browser/alloy/dialogs/alloy_constrained_window_views_client.cc",
     "libcef/browser/alloy/dialogs/alloy_constrained_window_views_client.h",
-    "libcef/browser/alloy/dialogs/alloy_javascript_dialog_manager_delegate.cc",
-    "libcef/browser/alloy/dialogs/alloy_javascript_dialog_manager_delegate.h",
     "libcef/browser/alloy/dialogs/alloy_web_contents_dialog_helper.cc",
     "libcef/browser/alloy/dialogs/alloy_web_contents_dialog_helper.h",
-    "libcef/browser/alloy/chrome_browser_process_alloy.cc",
-    "libcef/browser/alloy/chrome_browser_process_alloy.h",
-    "libcef/browser/alloy/chrome_profile_manager_alloy.cc",
-    "libcef/browser/alloy/chrome_profile_manager_alloy.h",
-    "libcef/browser/alloy/chrome_profile_alloy.cc",
-    "libcef/browser/alloy/chrome_profile_alloy.h",
     "libcef/browser/audio_capturer.cc",
     "libcef/browser/audio_capturer.h",
     "libcef/browser/audio_loopback_stream_creator.cc",
@@ -501,8 +474,6 @@ source_set("libcef_static") {
     "libcef/browser/browser_contents_delegate.h",
     "libcef/browser/browser_context.cc",
     "libcef/browser/browser_context.h",
-    "libcef/browser/browser_context_keyed_service_factories.cc",
-    "libcef/browser/browser_context_keyed_service_factories.h",
     "libcef/browser/browser_frame.cc",
     "libcef/browser/browser_frame.h",
     "libcef/browser/browser_host_base.cc",
@@ -580,50 +551,8 @@ source_set("libcef_static") {
     "libcef/browser/download_manager_delegate.h",
     "libcef/browser/download_manager_delegate_impl.cc",
     "libcef/browser/download_manager_delegate_impl.h",
-    "libcef/browser/extension_impl.cc",
-    "libcef/browser/extension_impl.h",
-    "libcef/browser/extensions/api/file_system/cef_file_system_delegate.cc",
-    "libcef/browser/extensions/api/file_system/cef_file_system_delegate.h",
-    "libcef/browser/extensions/api/storage/sync_value_store_cache.cc",
-    "libcef/browser/extensions/api/storage/sync_value_store_cache.h",
-    "libcef/browser/extensions/api/tabs/tabs_api.cc",
-    "libcef/browser/extensions/api/tabs/tabs_api.h",
-    "libcef/browser/extensions/alloy_extensions_util.cc",
-    "libcef/browser/extensions/alloy_extensions_util.h",
     "libcef/browser/extensions/browser_extensions_util.cc",
     "libcef/browser/extensions/browser_extensions_util.h",
-    "libcef/browser/extensions/browser_platform_delegate_background.cc",
-    "libcef/browser/extensions/browser_platform_delegate_background.h",
-    "libcef/browser/extensions/chrome_api_registration.cc",
-    "libcef/browser/extensions/chrome_api_registration.h",
-    "libcef/browser/extensions/component_extension_resource_manager.cc",
-    "libcef/browser/extensions/component_extension_resource_manager.h",
-    "libcef/browser/extensions/extensions_api_client.cc",
-    "libcef/browser/extensions/extensions_api_client.h",
-    "libcef/browser/extensions/extensions_browser_api_provider.cc",
-    "libcef/browser/extensions/extensions_browser_api_provider.h",
-    "libcef/browser/extensions/extensions_browser_client.cc",
-    "libcef/browser/extensions/extensions_browser_client.h",
-    "libcef/browser/extensions/extension_background_host.cc",
-    "libcef/browser/extensions/extension_background_host.h",
-    "libcef/browser/extensions/extension_function_details.cc",
-    "libcef/browser/extensions/extension_function_details.h",
-    "libcef/browser/extensions/extension_host_delegate.cc",
-    "libcef/browser/extensions/extension_host_delegate.h",
-    "libcef/browser/extensions/extension_system.cc",
-    "libcef/browser/extensions/extension_system.h",
-    "libcef/browser/extensions/extension_system_factory.cc",
-    "libcef/browser/extensions/extension_system_factory.h",
-    "libcef/browser/extensions/extension_view_host.cc",
-    "libcef/browser/extensions/extension_view_host.h",
-    "libcef/browser/extensions/extension_web_contents_observer.cc",
-    "libcef/browser/extensions/extension_web_contents_observer.h",
-    "libcef/browser/extensions/mime_handler_view_guest_delegate.cc",
-    "libcef/browser/extensions/mime_handler_view_guest_delegate.h",
-    "libcef/browser/extensions/value_store/cef_value_store.cc",
-    "libcef/browser/extensions/value_store/cef_value_store.h",
-    "libcef/browser/extensions/value_store/cef_value_store_factory.cc",
-    "libcef/browser/extensions/value_store/cef_value_store_factory.h",
     "libcef/browser/file_dialog_manager.cc",
     "libcef/browser/file_dialog_manager.h",
     "libcef/browser/file_dialog_runner.cc",
@@ -646,8 +575,6 @@ source_set("libcef_static") {
     "libcef/browser/main_runner.h",
     "libcef/browser/media_access_query.cc",
     "libcef/browser/media_access_query.h",
-    "libcef/browser/media_capture_devices_dispatcher.cc",
-    "libcef/browser/media_capture_devices_dispatcher.h",
     "libcef/browser/media_router/media_route_impl.cc",
     "libcef/browser/media_router/media_route_impl.h",
     "libcef/browser/media_router/media_router_impl.cc",
@@ -676,12 +603,6 @@ source_set("libcef_static") {
     "libcef/browser/net/chrome_scheme_handler.cc",
     "libcef/browser/net/chrome_scheme_handler.h",
     "libcef/browser/net/crlset_file_util_impl.cc",
-    "libcef/browser/net/devtools_scheme_handler.cc",
-    "libcef/browser/net/devtools_scheme_handler.h",
-    "libcef/browser/net/internal_scheme_handler.cc",
-    "libcef/browser/net/internal_scheme_handler.h",
-    "libcef/browser/net/scheme_handler.cc",
-    "libcef/browser/net/scheme_handler.h",
     "libcef/browser/net/throttle_handler.cc",
     "libcef/browser/net/throttle_handler.h",
     "libcef/browser/net_service/browser_urlrequest_impl.cc",
@@ -737,8 +658,6 @@ source_set("libcef_static") {
     "libcef/browser/prefs/pref_helper.h",
     "libcef/browser/prefs/pref_registrar.cc",
     "libcef/browser/prefs/pref_registrar.h",
-    "libcef/browser/prefs/pref_store.cc",
-    "libcef/browser/prefs/pref_store.h",
     "libcef/browser/prefs/renderer_prefs.cc",
     "libcef/browser/prefs/renderer_prefs.h",
     "libcef/browser/print_settings_impl.cc",
@@ -755,10 +674,6 @@ source_set("libcef_static") {
     "libcef/browser/server_impl.h",
     "libcef/browser/simple_menu_model_impl.cc",
     "libcef/browser/simple_menu_model_impl.h",
-    "libcef/browser/speech_recognition_manager_delegate.cc",
-    "libcef/browser/speech_recognition_manager_delegate.h",
-    "libcef/browser/ssl_host_state_delegate.cc",
-    "libcef/browser/ssl_host_state_delegate.h",
     "libcef/browser/ssl_info_impl.cc",
     "libcef/browser/ssl_info_impl.h",
     "libcef/browser/ssl_status_impl.cc",
@@ -841,12 +756,6 @@ source_set("libcef_static") {
     "libcef/browser/xml_reader_impl.h",
     "libcef/browser/zip_reader_impl.cc",
     "libcef/browser/zip_reader_impl.h",
-    "libcef/common/alloy/alloy_content_client.cc",
-    "libcef/common/alloy/alloy_content_client.h",
-    "libcef/common/alloy/alloy_main_delegate.cc",
-    "libcef/common/alloy/alloy_main_delegate.h",
-    "libcef/common/alloy/alloy_main_runner_delegate.cc",
-    "libcef/common/alloy/alloy_main_runner_delegate.h",
     "libcef/common/app_manager.cc",
     "libcef/common/app_manager.h",
     "libcef/common/base_impl.cc",
@@ -866,14 +775,6 @@ source_set("libcef_static") {
     "libcef/common/crash_reporting.h",
     "libcef/common/drag_data_impl.cc",
     "libcef/common/drag_data_impl.h",
-    "libcef/common/extensions/chrome_generated_schemas.cc",
-    "libcef/common/extensions/chrome_generated_schemas.h",
-    "libcef/common/extensions/extensions_api_provider.cc",
-    "libcef/common/extensions/extensions_api_provider.h",
-    "libcef/common/extensions/extensions_client.cc",
-    "libcef/common/extensions/extensions_client.h",
-    "libcef/common/extensions/extensions_util.cc",
-    "libcef/common/extensions/extensions_util.h",
     "libcef/common/file_util_impl.cc",
     "libcef/common/frame_util.cc",
     "libcef/common/frame_util.h",
@@ -883,8 +784,6 @@ source_set("libcef_static") {
     "libcef/common/main_runner_handler.h",
     "libcef/common/net/http_header_utils.cc",
     "libcef/common/net/http_header_utils.h",
-    "libcef/common/net/net_resource_provider.cc",
-    "libcef/common/net/net_resource_provider.h",
     "libcef/common/net/scheme_registration.cc",
     "libcef/common/net/scheme_registration.h",
     "libcef/common/net/url_util.cc",
@@ -934,14 +833,6 @@ source_set("libcef_static") {
     "libcef/common/waitable_event_impl.h",
     "libcef/features/runtime.h",
     "libcef/features/runtime_checks.h",
-    "libcef/renderer/alloy/alloy_content_renderer_client.cc",
-    "libcef/renderer/alloy/alloy_content_renderer_client.h",
-    "libcef/renderer/alloy/alloy_render_frame_observer.cc",
-    "libcef/renderer/alloy/alloy_render_frame_observer.h",
-    "libcef/renderer/alloy/alloy_render_thread_observer.cc",
-    "libcef/renderer/alloy/alloy_render_thread_observer.h",
-    "libcef/renderer/alloy/url_loader_throttle_provider_impl.cc",
-    "libcef/renderer/alloy/url_loader_throttle_provider_impl.h",
     "libcef/renderer/browser_impl.cc",
     "libcef/renderer/browser_impl.h",
     "libcef/renderer/chrome/chrome_content_renderer_client_cef.cc",
@@ -970,6 +861,121 @@ source_set("libcef_static") {
     "//chrome/app/chrome_main_delegate.cc",
     "//chrome/app/chrome_main_delegate.h",
   ]
+
+  if (enable_alloy_bootstrap) {
+    sources += [
+      "libcef/browser/alloy/alloy_browser_context.cc",
+      "libcef/browser/alloy/alloy_browser_context.h",
+      "libcef/browser/alloy/alloy_browser_main.cc",
+      "libcef/browser/alloy/alloy_browser_main.h",
+      "libcef/browser/alloy/alloy_content_browser_client.cc",
+      "libcef/browser/alloy/alloy_content_browser_client.h",
+      "libcef/browser/alloy/alloy_download_manager_delegate.cc",
+      "libcef/browser/alloy/alloy_download_manager_delegate.h",
+      "libcef/browser/alloy/alloy_download_util.cc",
+      "libcef/browser/alloy/alloy_download_util.h",
+      "libcef/browser/alloy/alloy_web_contents_view_delegate.cc",
+      "libcef/browser/alloy/alloy_web_contents_view_delegate.h",
+      "libcef/browser/alloy/devtools/alloy_devtools_window_runner.cc",
+      "libcef/browser/alloy/devtools/alloy_devtools_window_runner.h",
+      "libcef/browser/alloy/devtools/devtools_file_manager.cc",
+      "libcef/browser/alloy/devtools/devtools_file_manager.h",
+      "libcef/browser/alloy/devtools/devtools_frontend.cc",
+      "libcef/browser/alloy/devtools/devtools_frontend.h",
+      "libcef/browser/alloy/devtools/devtools_manager_delegate.cc",
+      "libcef/browser/alloy/devtools/devtools_manager_delegate.h",
+      "libcef/browser/alloy/dialogs/alloy_javascript_dialog_manager_delegate.cc",
+      "libcef/browser/alloy/dialogs/alloy_javascript_dialog_manager_delegate.h",
+      "libcef/browser/alloy/chrome_browser_process_alloy.cc",
+      "libcef/browser/alloy/chrome_browser_process_alloy.h",
+      "libcef/browser/alloy/chrome_profile_manager_alloy.cc",
+      "libcef/browser/alloy/chrome_profile_manager_alloy.h",
+      "libcef/browser/alloy/chrome_profile_alloy.cc",
+      "libcef/browser/alloy/chrome_profile_alloy.h",
+      "libcef/browser/browser_context_keyed_service_factories.cc",
+      "libcef/browser/browser_context_keyed_service_factories.h",
+      "libcef/browser/extension_impl.cc",
+      "libcef/browser/extension_impl.h",
+      "libcef/browser/extensions/api/file_system/cef_file_system_delegate.cc",
+      "libcef/browser/extensions/api/file_system/cef_file_system_delegate.h",
+      "libcef/browser/extensions/api/storage/sync_value_store_cache.cc",
+      "libcef/browser/extensions/api/storage/sync_value_store_cache.h",
+      "libcef/browser/extensions/api/tabs/tabs_api.cc",
+      "libcef/browser/extensions/api/tabs/tabs_api.h",
+      "libcef/browser/extensions/alloy_extensions_util.cc",
+      "libcef/browser/extensions/alloy_extensions_util.h",
+      "libcef/browser/extensions/browser_platform_delegate_background.cc",
+      "libcef/browser/extensions/browser_platform_delegate_background.h",
+      "libcef/browser/extensions/chrome_api_registration.cc",
+      "libcef/browser/extensions/chrome_api_registration.h",
+      "libcef/browser/extensions/component_extension_resource_manager.cc",
+      "libcef/browser/extensions/component_extension_resource_manager.h",
+      "libcef/browser/extensions/extensions_api_client.cc",
+      "libcef/browser/extensions/extensions_api_client.h",
+      "libcef/browser/extensions/extensions_browser_api_provider.cc",
+      "libcef/browser/extensions/extensions_browser_api_provider.h",
+      "libcef/browser/extensions/extensions_browser_client.cc",
+      "libcef/browser/extensions/extensions_browser_client.h",
+      "libcef/browser/extensions/extension_background_host.cc",
+      "libcef/browser/extensions/extension_background_host.h",
+      "libcef/browser/extensions/extension_function_details.cc",
+      "libcef/browser/extensions/extension_function_details.h",
+      "libcef/browser/extensions/extension_host_delegate.cc",
+      "libcef/browser/extensions/extension_host_delegate.h",
+      "libcef/browser/extensions/extension_system.cc",
+      "libcef/browser/extensions/extension_system.h",
+      "libcef/browser/extensions/extension_system_factory.cc",
+      "libcef/browser/extensions/extension_system_factory.h",
+      "libcef/browser/extensions/extension_view_host.cc",
+      "libcef/browser/extensions/extension_view_host.h",
+      "libcef/browser/extensions/extension_web_contents_observer.cc",
+      "libcef/browser/extensions/extension_web_contents_observer.h",
+      "libcef/browser/extensions/mime_handler_view_guest_delegate.cc",
+      "libcef/browser/extensions/mime_handler_view_guest_delegate.h",
+      "libcef/browser/extensions/value_store/cef_value_store.cc",
+      "libcef/browser/extensions/value_store/cef_value_store.h",
+      "libcef/browser/extensions/value_store/cef_value_store_factory.cc",
+      "libcef/browser/extensions/value_store/cef_value_store_factory.h",
+      "libcef/browser/media_capture_devices_dispatcher.cc",
+      "libcef/browser/media_capture_devices_dispatcher.h",
+      "libcef/browser/net/devtools_scheme_handler.cc",
+      "libcef/browser/net/devtools_scheme_handler.h",
+      "libcef/browser/net/internal_scheme_handler.cc",
+      "libcef/browser/net/internal_scheme_handler.h",
+      "libcef/browser/net/scheme_handler.cc",
+      "libcef/browser/net/scheme_handler.h",
+      "libcef/browser/prefs/pref_store.cc",
+      "libcef/browser/prefs/pref_store.h",
+      "libcef/browser/speech_recognition_manager_delegate.cc",
+      "libcef/browser/speech_recognition_manager_delegate.h",
+      "libcef/browser/ssl_host_state_delegate.cc",
+      "libcef/browser/ssl_host_state_delegate.h",
+      "libcef/common/alloy/alloy_content_client.cc",
+      "libcef/common/alloy/alloy_content_client.h",
+      "libcef/common/alloy/alloy_main_delegate.cc",
+      "libcef/common/alloy/alloy_main_delegate.h",
+      "libcef/common/alloy/alloy_main_runner_delegate.cc",
+      "libcef/common/alloy/alloy_main_runner_delegate.h",
+      "libcef/common/extensions/chrome_generated_schemas.cc",
+      "libcef/common/extensions/chrome_generated_schemas.h",
+      "libcef/common/extensions/extensions_api_provider.cc",
+      "libcef/common/extensions/extensions_api_provider.h",
+      "libcef/common/extensions/extensions_client.cc",
+      "libcef/common/extensions/extensions_client.h",
+      "libcef/common/extensions/extensions_util.cc",
+      "libcef/common/extensions/extensions_util.h",
+      "libcef/common/net/net_resource_provider.cc",
+      "libcef/common/net/net_resource_provider.h",
+      "libcef/renderer/alloy/alloy_content_renderer_client.cc",
+      "libcef/renderer/alloy/alloy_content_renderer_client.h",
+      "libcef/renderer/alloy/alloy_render_frame_observer.cc",
+      "libcef/renderer/alloy/alloy_render_frame_observer.h",
+      "libcef/renderer/alloy/alloy_render_thread_observer.cc",
+      "libcef/renderer/alloy/alloy_render_thread_observer.h",
+      "libcef/renderer/alloy/url_loader_throttle_provider_impl.cc",
+      "libcef/renderer/alloy/url_loader_throttle_provider_impl.h",
+    ]
+  }
 
   configs += [
     "libcef/features:config",
@@ -1267,6 +1273,10 @@ config("libcef_dll_wrapper_config") {
       # Increase the initial stack size to 8MiB from the default 1MiB.
       ldflags = [ "/STACK:0x800000" ]
     }
+  }
+
+  if (!enable_alloy_bootstrap) {
+    defines = [ "DISABLE_ALLOY_BOOTSTRAP" ]
   }
 }
 
